gitops/apps/smoke-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
